<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/text_color1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black_24dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/icon_close"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fuf"
            android:id="@+id/image_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Find your friendss on UrbanClap"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_friend_description"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_color_without_line"
            android:text="@string/find_friend_cta"
            android:textColor="@color/text_color1"
            android:textSize="15sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_friends_permission_text_1"
            android:textAlignment="textStart"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>
</RelativeLayout>