<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/text_color1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:layout_centerVertical="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get Help"
            android:background="@drawable/rectangle_box"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_marginHorizontal="15dp"
            android:id="@+id/user_profile_layout">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                android:id="@+id/profile_pic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello, Anand"
                android:layout_toEndOf="@id/profile_pic"
                android:layout_marginLeft="12dp"
                android:textSize="18sp"
                android:id="@+id/profile_name"
                android:fontFamily="sans-serif"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You are few steps away from \n completing your profile."
                android:layout_marginTop="5dp"
                android:layout_below="@id/profile_name"
                android:layout_toEndOf="@id/profile_pic"
                android:layout_marginLeft="12dp"
                android:fontFamily="sans-serif"/>
        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_profile_layout"
                android:layout_marginTop="10dp"
                android:id="@+id/description"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/color_rectangle_box">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Low demand in category"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:id="@+id/tittle"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_below="@id/tittle"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:orientation="vertical"
                android:id="@+id/details"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_box">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:id="@+id/identity"
                    android:padding="15dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/id"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ID Proof Photos with address"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:visibility="gone"
                    android:id="@+id/about">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/aboutt"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="About Me"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:id="@+id/upload">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/upload"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Upload photos of your work"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:id="@+id/award">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/award"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Award and certificates photos"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:id="@+id/service" >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/about"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add your service location"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:id="@+id/submit"
                    android:padding="15dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/congrats"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Submit References"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"/>
                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/discover"
                android:layout_marginBottom="80dp"
                android:layout_below="@id/submit_approval"
                android:layout_marginTop="25dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/find"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/Image1"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_launcher_background"
                        android:layout_marginStart="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Discover best Professionals on"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/text_dis"
                        android:layout_toEndOf="@id/Image1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="UrbanClap"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_below="@+id/text_dis"
                        android:layout_toEndOf="@id/Image1"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/view"
                    android:layout_below="@+id/find"
                    android:background="@color/colorPrimaryDark"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/rl1"
                    android:layout_below="@+id/view">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/Image2"
                        android:layout_centerVertical="true"
                        android:src="@drawable/fuf"
                        android:layout_marginStart="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find"
                        android:id="@+id/text1"
                        android:textAlignment="textStart"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/Image2"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find1"
                        android:textAlignment="textStart"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_below="@id/text1"
                        android:layout_toEndOf="@id/Image2"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="5dp"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/rl1"
                    android:background="@color/colorPrimaryDark"/>
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color_without_line"
                android:text="Submit for Approval "
                android:layout_marginHorizontal="15dp"
                android:textColor="@color/text_color1"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/submit_approval"
                android:layout_marginTop="15dp"
                android:layout_below="@id/details" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>